--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">Quizz</string>
-    <string name="gameTitle">Quizz</string>
+    <string name="app_name">Quixels</string>
+    <string name="gameTitle">Quixels</string>
     <string name="SinglePlayerBtnText">Singleplayer</string>
     <string name="MultiPlayerBtnText">Multiplayer</string>
     <string name="StatsBtnText">Statistics</string>
