--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">Quixels</string>
-    <string name="gameTitle">Quixels</string>
+    <string name="app_name">Quixel</string>
+    <string name="gameTitle">Quixel</string>
     <string name="SinglePlayerBtnText">SINGLEPLAYER</string>
     <string name="MultiPlayerBtnText">MULTIPLAYER</string>
     <string name="StatsBtnText">STATISTICS</string>
@@ -63,7 +63,6 @@
 
     <string-array name="gamemode_names">
         <item>Quickplay Mode</item>
-        <item>Endless Mode</item>
         <item>Custom Mode</item>
     </string-array>
     <!-- TODO: Remove or change this placeholder text -->
